feat: ajout de i18n

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -215,7 +215,7 @@
             <li>
               <a class="dropdown-item d-flex align-items-center" href="#" (click)="changeLang('fr')">
                 <img src="../../../assets/flags/fr.png" alt="fr">
-                <label for="">FR</label>
+                <label for="">{{ 'languages.french' | translate}}</label>
               </a>
             </li>
             <li>
@@ -224,8 +224,8 @@
   
             <li>
               <a class="dropdown-item d-flex align-items-center" href="#" (click)="changeLang('en')">
-                <img src="../../../assets/flags/us.png" alt="fr">
-                <label for="">EN</label>
+                <img src="../../../assets/flags/us.png" alt="en">
+                <label for="">{{ 'languages.english' | translate}}</label>
               </a>
             </li>
   
