--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
 
 <!-- ======= Sidebar ======= -->
 <aside id="sidebar" class="sidebar">
-    <!-- <app-sidebar></app-sidebar> -->
+    <app-sidebar></app-sidebar>
 </aside><!-- End Sidebar-->
 
 <main id="main" class="main">
