feat: ajout du bloc card

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
 
             <!-- Blocs Card -->
             <div class="col-12">
-                <!-- <app-card-block></app-card-block> -->
+                <app-bloc-cards></app-bloc-cards>
             </div>
             <!-- End Blocs Card -->
 
