feat: mise en place du guard pour gerer la connexion a l'appli

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -195,7 +195,7 @@
             </li>
   
             <li>
-              <a class="dropdown-item d-flex align-items-center btn-goTo">
+              <a class="dropdown-item d-flex align-items-center btn-goTo" (click)="logout()" >
                 <i class="bi bi-box-arrow-right"></i>
                 <span>Logout</span>
               </a>
