--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -130,7 +130,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="tables-data.html">
+                    <a [routerLink]="[ '/users']">
                         <i class="bi bi-circle"></i><span>voir users</span>
                     </a>
                 </li>
