--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,12 @@
 .btn-goTo {
     cursor: pointer;
 }
+/*--------------------------------------------------------------
+# Main
+--------------------------------------------------------------*/
+#main {
+    margin-top: 3.5rem;
+    margin-left: 20rem;
+    margin-right: 2rem;
+    transition: all 0.3s;
+}
