feat: ajout des actions sur le user

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -125,7 +125,7 @@
             </a>
             <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                 <li>
-                    <a href="tables-general.html">
+                    <a [routerLink]="[ '/users']">
                         <i class="bi bi-circle"></i><span>Managers users</span>
                     </a>
                 </li>
