--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -6,10 +6,7 @@
                     <div class="row">
                         <div class="col-sm-8">
                             <h2>Customer <b>List</b></h2>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#myModal">
-                                <i class="fa-solid fa-user-plus"></i>
-                            </button>
+                            <a [routerLink]="[ '/register']"> <i class="fa-solid fa-user-plus"></i></a>
                         </div>
                         <div class="col-sm-4">
                             <div class="search-box">
@@ -43,11 +40,10 @@
                             <td>******************</td>
                             <td>{{user.phone}}</td>
                             <td>
-                                <a href="#" class="view" title="View" data-toggle="tooltip"><i
-                                        class="fa-regular fa-eye material-icons"></i></a>
-                                <a href="#" class="edit" title="Edit" data-toggle="tooltip"><i
+                                <a [routerLink]="[ '/register']"
+                                [queryParams]="{ id: user.userId}" title="Edit" data-toggle="tooltip"><i
                                         class="fa-solid fa-pencil material-icons"></i></a>
-                                <a (click)="deleteUser()" class="delete" title="Delete" data-toggle="tooltip"><i
+                                <a (click)="deleteUser(user)" class="delete" title="Delete" data-toggle="tooltip"><i
                                         class="fa-solid fa-trash-can material-icons"></i></a>
                             </td>
                         </tr>
@@ -67,23 +63,6 @@
                         <li class="page-item"><a href="#" class="page-link"><i class="fa fa-angle-double-right"></i></a>
                         </li>
                     </ul>
-                </div>
-            </div>
-        </div>
-        <!-- The Modal -->
-        <div class="modal" id="myModal">
-            <div class="modal-dialog modal-dialog-scrollable">
-                <div class="modal-content">
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        <app-register></app-register>
-                    </div>
-
-                    <!-- Modal footer -->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                    </div>
-
                 </div>
             </div>
         </div>
