--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+/* Order */
+@layer reset, primeng;
+
 /* You can add global styles to this file, and also import other style files */
 .btn-goTo {
     cursor: pointer;
