feat: mise a jour avec primeng

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -66,7 +66,7 @@
                                 </div>
                                 <div class="col-12">
                                     <button class="btn btn-primary w-100" type="submit"
-                                        [disabled]="formCreate.invalid">Create Account</button>
+                                        [disabled]="formCreate.invalid">{{submitLabel}}</button>
                                 </div>
                             </form>
 
