--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -6,7 +6,7 @@
             <div class="p-datatable-header">
                 <div>
                     @if (isEdited) {
-                        <p-button label="User" icon="pi pi-plus" (onClick)="showPopup()" />
+                    <p-button [text]="true" [raised]="true" icon="pi pi-user-plus" (onClick)="showPopup()" />
                     }
                 </div>
                 <div>
@@ -30,6 +30,7 @@
                 <th style="width:20%">Mot de passe</th>
                 <th style="width:20%">N° telephone</th>
                 @if (isEdited) {
+                <th style="width:20%">Roles</th>
                 <th style="width:20%">Actions</th>
                 }
             </tr>
@@ -44,10 +45,10 @@
                 <td>******************</td>
                 <td>{{user.phone}}</td>
                 @if (isEdited) {
+                <td>{{user.type}}</td>
                 <td class="button-actions">
-                    <p-button icon="pi pi-check" />
-                    <p-button icon="pi pi-trash" />
-                    <p-button icon="pi pi-times" />
+                    <p-button class="buton-action-item" icon="pi pi-user-edit" (onClick)="editUser(user)" />
+                    <p-button icon="pi pi-trash" (onClick)="deleteUser(user)" />
                 </td>
                 }
             </tr>
